vercre-issuer/src/snapshots/vercre_issuer__token__tests__simpl-token.snap
---
source: vercre-issuer/src/token.rs
assertion_line: 260
expression: "&response"
---
access_token: "[access_token]"
token_type: Bearer
expires_in: 900
c_nonce: "[c_nonce]"
c_nonce_expires_in: 600
