vercre-issuer/src/snapshots/vercre_issuer__token__tests__simple-token.snap
---
source: vercre-issuer/src/token.rs
assertion_line: 233
expression: "&token_resp"
---
access_token: "[access_token]"
token_type: Bearer
expires_in: 900
c_nonce: "[c_nonce]"
c_nonce_expires_in: 600
